# App/python-server/services/data_service.py
@@ -1,4 +1,3 @@
-from datetime import datetime
 from models.data_model import *
 from ext_api_fetcher.ext_api_fetcher import *
 
@@ -18,7 +17,7 @@ class WeatherDataService:
     def __init__(self):
         self.fetcher = FetchWeatherData()
 
-    async def weather_data(self, lat: float, lon: float, requested_dt: datetime) -> WeatherDataPoint | ErrorResponse:
+    async def weather_data(self, lat: float, lon: float, requested_dt: str) -> WeatherDataPoint | ErrorResponse:
         return await self.fetcher.fetch_weather_data(lat, lon, requested_dt)
 
 
@@ -26,11 +25,11 @@ class PriceDataService:
     def __init__(self):
         self.fetcher = FetchPriceData()
 
-    async def price_data_latest(self) -> List[PriceDataPoint] | ErrorResponse:
+    async def price_data_latest(self) -> List[PriceDataPoint]:
         return await self.fetcher.fetch_price_data_latest()
     
-    async def price_data_today(self) -> List[PriceDataPoint] | ErrorResponse:
+    async def price_data_today(self) -> List[PriceDataPoint]:
         return await self.fetcher.fetch_price_data_today()
     
-    async def price_data_range(self, start_time: str, end_time: str) -> List[PriceDataPoint] | ErrorResponse:
+    async def price_data_range(self, start_time: str, end_time: str) -> List[PriceDataPoint]:
         return await self.fetcher.fetch_price_data_range(start_time, end_time)
