# Documents/api_definitions/openapi.json
@@ -5,64 +5,6 @@
         "version": "0.1.0"
     },
     "paths": {
-        "/api/public/windpower/kokeilu": {
-            "get": {
-                "summary": "Get Windpower",
-                "description": "Get wind power production forecast.\nFetches forecast data from Fingrid dataset ID 245.\n\nReturns:\n    dict: A data point or an error message.",
-                "operationId": "get_windpower_api_public_windpower_kokeilu_get",
-                "responses": {
-                    "200": {
-                        "description": "Successful Response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/RootModel_DataPoint_"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/public/windpower/range/kokeilu": {
-            "post": {
-                "summary": "Post Windpower Range",
-                "description": "Get wind power production data for a given time range.\nFetches data from Fingrid dataset ID 245.\n\nArgs:\n    time_range (TimeRangeRequest): Start and end time in RFC 3339 format.\n\nReturns:\n    list[dict]: A list of data points or an error message.",
-                "operationId": "post_windpower_range_api_public_windpower_range_kokeilu_post",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/TimeRangeRequest"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successful Response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/RootModel_List_DataPoint__"
-                                }
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Validation Error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/HTTPValidationError"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/public/windpower": {
             "get": {
                 "summary": "Get Windpower",
@@ -74,7 +16,17 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/RootModel_DataPoint_"
+                                    "$ref": "#/components/schemas/FingridDataPoint"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
                                 }
                             }
                         }
@@ -103,7 +55,21 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/RootModel_List_DataPoint__"
+                                    "items": {
+                                        "$ref": "#/components/schemas/FingridDataPoint"
+                                    },
+                                    "type": "array",
+                                    "title": "Response Post Windpower Range Api Public Windpower Range Post"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
                                 }
                             }
                         }
@@ -132,7 +98,17 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/RootModel_DataPoint_"
+                                    "$ref": "#/components/schemas/FingridDataPoint"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
                                 }
                             }
                         }
@@ -161,7 +137,21 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/RootModel_List_DataPoint__"
+                                    "items": {
+                                        "$ref": "#/components/schemas/FingridDataPoint"
+                                    },
+                                    "type": "array",
+                                    "title": "Response Post Consumption Range Api Public Consumption Range Post"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
                                 }
                             }
                         }
@@ -190,7 +180,17 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/RootModel_DataPoint_"
+                                    "$ref": "#/components/schemas/FingridDataPoint"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
                                 }
                             }
                         }
@@ -219,7 +219,21 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/RootModel_List_DataPoint__"
+                                    "items": {
+                                        "$ref": "#/components/schemas/FingridDataPoint"
+                                    },
+                                    "type": "array",
+                                    "title": "Response Post Production Range Api Public Production Range Post"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
                                 }
                             }
                         }
@@ -258,7 +272,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/RootModel_WeatherDataPoint_"
+                                    "$ref": "#/components/schemas/WeatherDataPoint"
                                 }
                             }
                         }
@@ -279,7 +293,7 @@
         "/api/public/price/range": {
             "post": {
                 "summary": "Post Price Range",
-                "description": "Get price data for specific time range from Porssisahko API\n\nArgs:\n    Timestamp in RFC 3339 format.\n\nReturns:\n    list[dict]: Price data or en error message",
+                "description": "Get price data for specific time range from Porssisahko API\n\nArgs:\n    Timestamp in RFC 3339 format.\n\nReturns:\n    list[dict]: Price data or an error message",
                 "operationId": "post_price_range_api_public_price_range_post",
                 "requestBody": {
                     "content": {
@@ -296,13 +310,7 @@
                         "description": "Successful Response",
                         "content": {
                             "application/json": {
-                                "schema": {
-                                    "items": {
-                                        "$ref": "#/components/schemas/PriceDataPoint"
-                                    },
-                                    "type": "array",
-                                    "title": "Response Post Price Range Api Public Price Range Post"
-                                }
+                                "schema": {}
                             }
                         }
                     },
@@ -337,6 +345,16 @@
                                 }
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -356,6 +374,16 @@
                                     },
                                     "type": "array",
                                     "title": "Response Get Prices Today Api Public Data Today Get"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
                                 }
                             }
                         }
@@ -454,22 +482,40 @@
     },
     "components": {
         "schemas": {
-            "DataPoint": {
+            "ErrorResponse": {
+                "properties": {
+                    "error": {
+                        "type": "string",
+                        "title": "Error",
+                        "description": "Error message describing the issue.",
+                        "example": "An error occurred"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "error"
+                ],
+                "title": "ErrorResponse"
+            },
+            "FingridDataPoint": {
                 "properties": {
                     "startTime": {
                         "type": "string",
                         "title": "Starttime",
-                        "example": "2025-05-08T04:00:00.000Z"
+                        "description": "Start time in RFC 3339 format (e.g., 2024-05-01T00:00:00Z)",
+                        "example": "2024-05-01T00:00:00Z"
                     },
                     "endTime": {
                         "type": "string",
                         "title": "Endtime",
-                        "example": "2025-05-08T04:15:00.000Z"
+                        "description": "End time in RFC 3339 format (e.g., 2024-05-02T00:00:00Z)",
+                        "example": "2024-05-02T00:00:00Z"
                     },
                     "value": {
                         "type": "number",
                         "title": "Value",
-                        "example": 7883.61
+                        "description": "Value of the data point",
+                        "example": "7883.61"
                     }
                 },
                 "type": "object",
@@ -478,7 +524,7 @@
                     "endTime",
                     "value"
                 ],
-                "title": "DataPoint"
+                "title": "FingridDataPoint"
             },
             "HTTPValidationError": {
                 "properties": {
@@ -498,7 +544,7 @@
                     "startDate": {
                         "type": "string",
                         "title": "Startdate",
-                        "description": "UTC datetime in RFC 3339 format",
+                        "description": "UTC str in RFC 3339 format",
                         "example": "2025-05-08T04:00:00.000Z"
                     },
                     "price": {
@@ -514,21 +560,6 @@
                     "price"
                 ],
                 "title": "PriceDataPoint"
-            },
-            "RootModel_DataPoint_": {
-                "$ref": "#/components/schemas/DataPoint",
-                "title": "RootModel[DataPoint]"
-            },
-            "RootModel_List_DataPoint__": {
-                "items": {
-                    "$ref": "#/components/schemas/DataPoint"
-                },
-                "type": "array",
-                "title": "RootModel[List[DataPoint]]"
-            },
-            "RootModel_WeatherDataPoint_": {
-                "$ref": "#/components/schemas/WeatherDataPoint",
-                "title": "RootModel[WeatherDataPoint]"
             },
             "TimeRangeRequest": {
                 "properties": {
@@ -562,6 +593,18 @@
                     "password": {
                         "type": "string",
                         "title": "Password"
+                    },
+                    "role": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "Role",
+                        "default": "user"
                     }
                 },
                 "type": "object",
@@ -609,16 +652,19 @@
                     "temperature_celsius": {
                         "type": "number",
                         "title": "Temperature Celsius",
+                        "description": "Air temperature in degrees Celsius based on the forecast.",
                         "example": 8.5
                     },
                     "wind_speed_mps": {
                         "type": "number",
                         "title": "Wind Speed Mps",
+                        "description": "Wind speed in meters per second based on the forecast.",
                         "example": 2.2
                     },
                     "closest_forecast_time": {
                         "type": "string",
                         "title": "Closest Forecast Time",
+                        "description": "Timestamp (in UTC, RFC 3339 format) of the closest available weather forecast.",
                         "example": "2025-05-09T16:00:00Z"
                     }
                 },
@@ -647,7 +693,7 @@
                     "timestamp": {
                         "type": "string",
                         "title": "Timestamp",
-                        "description": "UTC datetime in RFC 3339 format, e.g. 2024-05-05T13:30:00Z",
+                        "description": "UTC str in RFC 3339 format, e.g. 2024-05-05T13:30:00Z",
                         "example": "2024-05-05T13:30:00Z"
                     }
                 },
